--- a/projeto/src/index.html
+++ b/projeto/src/index.html
@@ -9,7 +9,43 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
-    <h1 class="bg-red-900">Teste</h1>
-    <i class="fab fa-instagram"></i>
+    <header>
+        <div class="flex fixed bg-black w-full px-3 md:px-20 py-4">
+            <div class="container flex items-center mx-auto">
+                <div>
+                    <a href="#">
+                        <img src="img/spotify-logo.png" alt="spotify" class="w-20 md:w-125px">
+                    </a>
+                </div>
+                <div class="flex justify-end flex-1 md:hidden text-white text-3xl">
+                    <i class="fas fa-bars"></i>
+                </div>
+                <div class="flex items-end flex-1 text-white font-bold hidden md:flex">
+                    <nav class="flex-1">
+                        <ul class="flex justify-end flex-1">
+                            <li class="px-4">
+                                <a href="#" class="hover:text-hoverspt text-sm">Premium</a>
+                            </li>
+                            <li class="px-4">
+                                <a href="#" class="hover:text-hoverspt text-sm">Ajuda</a>
+                            </li>
+                            <li class="px-4">
+                                <a href="#" class="hover:text-hoverspt text-sm">Baixar</a>
+                            </li>
+                            <li class="px-4">
+                                <span class="border-r border-white"></span>
+                            </li>
+                            <li class="px-4">
+                                <a href="#" class="hover:text-hoverspt text-sm">Inscrever-se</a>
+                            </li>
+                            <li class="px-4">
+                                <a href="#" class="hover:text-hoverspt text-sm">Log in</a>
+                            </li>
+                        </ul>
+                    </nav>
+                </div>
+            </div>
+        </div>
+    </header>
 </body>
 </html>
